# Adafruit-GFX-VisualEditor

./: README.md
backend/: Cargo.toml
backend/src/: main.rs
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: ambient.d.ts  app.css  app.html  canvas.ts  canvasOb.ts  cell.ts  codeFormat.txt  codeONLYFormat.txt  createCode.ts  defaultLabelColors.json  displayToLib.json
frontend/src/classes/: CanvasOb.ts  Cell.ts
frontend/src/classes/compoundshapes/: Heart.ts  Polygon.ts  Star.ts
frontend/src/classes/shapes/: Circle.ts  Dot.ts  HorizontalLine.ts  Line.ts  Rect.ts  RoundRect.ts  TestTesting.js  Text.ts  Triangle.ts  VerticalLine.ts
frontend/src/lib/components/: Color.svelte  ConfirmationModal.svelte  IconButton.svelte  Screen.svelte  SettingsModal.svelte  TextButton.svelte  Toggle.svelte  Tool.svelte  Tooltip.svelte  TooltipTop.svelte
frontend/src/lib/containers/: Canvas.svelte  ColorSelector.svelte  ConfirmationModal.svelte  Header.svelte  Modal.svelte  PropertiesPanel.svelte  ScreenDropdown.svelte  ToolSelector.svelte  objectList.ts
frontend/src/routes/: +page.svelte  +page.ts  tools.ts
frontend/src/utils/: displayToLib.json
