[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
axum-error = "0.2.0"
dotenv = "0.15.0"
tokio = { version = "1.34.0", features = ["full"] }
tower-http = { version = "0.4.4", features = ["cors"] }
